--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Starbucks</title>
+    <title>Starbucks Coffee Company</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
@@ -175,12 +175,23 @@
         <div class="footer5">
             <h3>Social Media</h3>
            <div class="imgs">
-            <img class="logo" id="insta" src="image/instagram.png"  alt="instalogo">
-           <img class="logo" id="face" src="image/twitter.png" alt="twitter logo">
-           <img class="logo" id="x" src="image/facebook.png" alt="facebook logo">
+            <a href="https://www.instagram.com/starbucksindia?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">
+                <img class="logo" id="insta" src="image/insta icon.png"  alt="instalogo">
+            </a>
+            <a href="https://x.com/starbucksindia">
+            <img class="logo" id="face" src="image/icons8-twitter-50.png" alt="twitter logo">
+           </a>
+           <a href="https://www.facebook.com/starbucksindia/">
+                <img class="logo" id="x" src="image/icons8-facebook-50.png" alt="facebook logo">
+           </a>
         </div>
         </div>
-        <div class="footer6"></div>
+        <div class="footer6">
+            <a href="https://apps.apple.com/in/app/starbucks-india/id1210203958">
+            <img src="image/appstoreiOS.png" alt="IOS Download"></a>
+            <a href="https://play.google.com/store/apps/details?id=com.starbucks.in">
+            <img src="image/appstoreAndroid.png" alt="Android Download"></a>
+        </div>
        
      </div>
     <div class="button">
