--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             </div>
             <div class="navclick">
                 <a href="#">Home</a>
-                <a href="#">Gift</a>
-                <a href="#">Order</a>
+                <a href="https://www.starbucks.in/giftcards">Gift</a>
+                <a href="https://www.starbucks.in/ordering">Order</a>
                 <a href="#">Pay</a>
-                <a href="#">Store</a>
+                <a href="https://www.starbucks.in/store-locator">Store</a>
             </div>
                 <div class="search-icon">
                     <span class="material-symbols-outlined">
@@ -28,9 +28,10 @@
                     <input type="search" class="searchbar" placeholder="Looking For Something Specific?">
                 </div>
             <div class="account-icon">
+                <a href="https://www.starbucks.in/profile">
                 <span class="material-symbols-outlined">
                     person
-                    </span>
+                    </span></a>
             </div>
         </div>
     </header>
@@ -38,7 +39,7 @@
 
     <div class="second-container">
         <p>Starbucks</p>
-        <a href="#" class="Know More">Know More</a>
+        <a href="https://www.starbucks.in/rewards" class="Know More">Know More</a>
         
     </div>
     <div class="third-container">
@@ -54,7 +55,7 @@
 
             <p class="rupees">Rs 250</p>
 
-            <a href="#" class="order">Order now </a>
+            <a href="https://www.starbucks.in/ordering" class="order">Order now </a>
             
     </div>
    </div>
@@ -63,12 +64,12 @@
    </div>
    <div class="coffee-images">
 
-    <label><img class="first" src="image/Bestseller.webp" alt="images"> <p class="p1">Bestseller</p></label>
-   <label> <img class="second" src="image/Drinks.webp" alt="images"><p class="p2">Drinks</p></label>
-   <label><img class="third" src="image/Food.webp" alt="images"> <p class="p3">Food</p></label>
-    <label> <img class="four" src="image/Merchandise.webp" alt="images"><p class="p4">Merchandise</p></label>
-    <label>  <img class="fifth" src="image/CoffeeAtHome.webp" alt="images"><p class="p5">Coffee At Home</p></label>
-    <label> <img class="six" src="image/ReadyToEat.webp" alt="images"><p class="p6">Ready To Eat</p></label>
+    <label><a href="https://www.starbucks.in/ordering"> <img class="first" src="image/Bestseller.webp" alt="images"></a> <p class="p1">Bestseller</p></label>
+   <label> <a href="https://www.starbucks.in/ordering"><img class="second" src="image/Drinks.webp" alt="images"></a><p class="p2">Drinks</p></label>
+   <label><a href="https://www.starbucks.in/ordering"><img class="third" src="image/Food.webp" alt="images"> </a><p class="p3">Food</p></label>
+    <label><a href="https://www.starbucks.in/ordering"> <img class="four" src="image/Merchandise.webp" alt="images"></a><p class="p4">Merchandise</p></label>
+    <label>  <a href="https://www.starbucks.in/ordering"><img class="fifth" src="image/CoffeeAtHome.webp" alt="images"></a><p class="p5">Coffee At Home</p></label>
+    <label><a href="https://www.starbucks.in/ordering"> <img class="six" src="image/ReadyToEat.webp" alt="images"></a><p class="p6">Ready To Eat</p></label>
    </div>
 
    <!-- main two section -->
@@ -89,7 +90,7 @@
             <p class="capa">Cappuccino </p>
             <div class="price">
                 ₹ 283.50
-                <a href="#" class="additem">Add Item</a>
+                <a href="https://www.starbucks.in/ordering" class="additem">Add Item</a>
              </div>
          </div>   
         </div>
@@ -104,7 +105,7 @@
                 <p class="price1">₹ 309.50</p>
              </div>
              <h3>Signature Hot Chocalate</h3>
-             <a href="#">Add Item</a>
+             <a href="https://www.starbucks.in/ordering">Add Item</a>
         </div>
 
 
@@ -117,7 +118,7 @@
                 <p class="price2">₹ 378.00</p>
              </div>
              <h3>Vanilla Milkshake</h3>
-             <a href="#">Add Item</a>
+             <a href="https://www.starbucks.in/ordering">Add Item</a>
 
         </div>
     </div>
